syntax = "proto3";


package app.improving.membercontext.member;

import "common_api.proto";
import "google/protobuf/timestamp.proto";
import "kalix/annotations.proto";

enum ApiNotificationPreference {
    API_NOTIFICATION_PREFERENCE_EMAIL = 0;
    API_NOTIFICATION_PREFERENCE_SMS = 1;
    API_NOTIFICATION_PREFERENCE_APPLICATION = 2;
}

enum ApiMemberStatus {
    API_MEMBER_STATUS_ACTIVE = 0;
    API_MEMBER_STATUS_INACTIVE = 2;
    API_MEMBER_STATUS_SUSPENDED = 3;
    API_MEMBER_STATUS_TERMINATED = 4;
    API_MEMBER_STATUS_UNKNOWN = 5;
}

message ApiInfo {
    ApiContact contact = 1;
    string handle = 2;
    string avatar = 3; // URL type?
    string first_name = 4;
    string last_name = 5;
    optional ApiNotificationPreference notification_preference = 6;
    repeated ApiOrganizationId organization_membership = 7;
    optional ApiTenantId tenant = 8;
}

message ApiRegisterMember {
    string member_id = 1 [(kalix.field).entity_key = true];
    ApiInfo info = 2;
    ApiMemberId registering_member = 3;
}

message ApiMemberMap {
    map<string, ApiInfo> map = 1;
}

message ApiRegisterMemberList {
    ApiMemberMap member_list = 1;
    ApiMemberId registering_member = 2;
}

message ApiUpdateMemberInfo {
    string member_id = 1 [(kalix.field).entity_key = true];
    ApiUpdateInfo info = 2;
    ApiMemberId acting_member = 3;
}

message ApiUpdateMemberStatus {
    string member_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId acting_member = 2;
    ApiMemberStatus new_status = 3;
}

message ApiUpdateInfo {
    ApiContact contact = 1;
    string handle = 2;
    string avatar = 3; // URL type?
    string first_name = 4;
    string last_name = 5;
    optional ApiNotificationPreference notification_preference = 6;
    repeated ApiOrganizationId organization_membership = 7;
    ApiTenantId tenant_id = 8;
}

message ApiGetMemberData {
    string member_id = 1 [(kalix.field).entity_key = true];
}

message ApiMetaInfo {
    google.protobuf.Timestamp created_on = 1;
    ApiMemberId created_by = 2;
    google.protobuf.Timestamp last_modified_on = 3;
    ApiMemberId last_modified_by = 4;
    ApiMemberStatus member_status = 5;
}

message ApiMemberData  {
    string member_id = 1 [(kalix.field).entity_key = true];
    ApiUpdateInfo info = 2;
    ApiMetaInfo meta = 3;
}